syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = ".;fhe";
option java_multiple_files = true;
option java_package = "com.thoughtworks.heaas.fhe";
option java_outer_classname = "FHE";

package fhe;

// Interface exported by the server.
service FHE {
  // KeyManagement
  // GenerateKey Create a key pair (NOTICE: only for delegated key management)
  rpc GenerateKey(google.protobuf.Empty) returns (KeyPair) {}
  // StoreKey Store a key pair (NOTICE: only for delegated key management)
  rpc StoreKey(StoreKeyRequest) returns (google.protobuf.Empty) {}
  // StorePublicKey Store a key pair only with Public key
  rpc StorePublicKey(StoreKeyRequest) returns (google.protobuf.Empty) {}
  // FetchPublicKey Fetch a key pair by key string
  rpc FetchPublicKey(FetchPublicKeyRequest) returns (KeyPair) {}
  // FetchPublicKeyBySHA256 Fetch a key pair by sha256 digest string 
  rpc FetchPublicKeyBySHA256(FetchPublicKeyBySHA256Request) returns (KeyPair) {}
  // SetAsk send out request for eligible quote
  rpc SetAsk(AskRequest) returns (google.protobuf.Empty) {}
  // SetBid send out request for eligible quote
  rpc SetBid(BidRequest) returns (google.protobuf.Empty) {}
  // EligibleBid gets interest and eligible loan quote
  rpc EligibleBid(EligibleBidRequest) returns (EligibleBidResponse) {}
}

message KeyPair {
  bytes secretKey = 1;
  bytes publicKey = 2;
}

message StoreKeyRequest {
  string  account = 1;
  KeyPair keyPair = 2;
}

message FetchPublicKeyRequest {
  string  account = 1;
}

message FetchPublicKeyBySHA256Request {
  string  hash = 1;
}

message EligibleLoanResponse {
  string  key = 1;
}

message AskRequest {
  string  account = 1;
  bytes   limitPriceCipherText = 2;
}

message BidRequest {
  string  targetAccount = 1;
  string  account = 2;
  bytes   creditCipherText = 3;
  bytes   limitPriceCipherText = 4;
}

message EligibleBidRequest {
  string  account = 1;
}

message EligibleBidResponse {
  uint64  totalBidNumber = 1;
  message Bid {
    string account = 1;
    bytes  limitPriceDistanceCiphertext = 2;
    bytes  creditDistanceCiphertext = 3;
  }
  repeated Bid bids = 2;
}
